Fixed logout alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -244,3 +244,7 @@ body {
   padding: 0px;
   justify-content: center;
 }
+
+.margin-bottom-5 {
+  padding-bottom: 10px;
+}
